# controllers_interaction_module_ethercat

./: .gitignore  .main.cpp.swp  CMakeLists.txt  Doxyfile  main.cpp  upload_sii
include/: coe_drive_state_handler.h  coe_object_names.h  coe_process_object.h  common_move_drive_task.h  dc_master_to_reference_timer.h  debug_logger.h  default_sync_info.h  emulated_kv_detector_drive.h  emulated_lonely_drive.h  ethercat_network_telemetry.h  ethercat_slave_builder.h  ethercat_slave_names.h  ethercat_thread_builder.h  ethercat_timer.h  external_emulation_manager.h  gantry.h  gantry_drive_mklkt_builder.h  gantry_move_task.h  gantry_task_state.h  gantry_telemetry.h  io_module_cn8033.h  io_module_cn8033_task_context.h  io_module_cn8033_task_state.h  io_module_mklkt_builder.h  kv_detector_drive.h  kv_detector_drive_enable_task.h  kv_detector_drive_move_task.h  kv_detector_drive_telemetry.h  kv_filter_drive_move_task.h  kv_filter_drive_stop_task.h  kv_filter_drive_telemetry.h  lonely_drive.h  lonely_drive_enable_task.h  lonely_drive_move_task.h  lonely_drive_task_state.h  lonely_drive_test_emulation.h  mailbox_manager.h  mailbox_state.h  mailbox_writing_state.h  odot_cn_8033_sync_info.h  (+6 more)
src/core/: coe_drive_state_handler.h  coe_service_object.h  ecrt.h  emulated_event.cpp  ethercat_configuration.cpp  ethercat_configuration.h  ethercat_domain.h  ethercat_master.h  ethercat_slave.cpp  ethercat_slaves_container.h  ethercat_telemetry_broker.h  ethercat_timer.h  external_emulation_manager.cpp  mutual_access_synchronizer.h  sdo_list.h  state_content_creator.h  stopwatch.h  subsystem.h  (+3 more)
(+255 files in other folders)
